= BinData Changelog

== Version 0.9.0 (2008-06-02)

* Added :adjust_offset option to automatically seek to a given offset.
* Modified #read to accept strings as well as IO streams.
* Choice now accepts sparse arrays and hashes as :choice.
* Added BinData::Rest to help with debugging.
* Major internal restructuring - memory usage is much better.
* Improved documentation

== Version 0.8.1 (2008-01-14)

* Reduced memory consumption.
* Increased execution speed.
* Deprecated BinData::Base.parameters
* Fixed spec syntax (thanks to David Goodlad)

== Version 0.8.0 (2007-10-14)

* Add reserved field names to Struct.
* Prevent warnings about method redefinition.
* Allow Struct to masquerade as one of its fields.
* Renamed String param :initial_length to :read_length.
* BinData::Array now behaves more like the internal ruby array.

== Version 0.7.0 (2007-08-26)

* Arrays now support terminating conditions as well as fixed length reads.
* Updated specs to new rspec syntax (0.9).
* Added scoped resolution of variables in lambdas.
* Added ability to append elements to arrays.

== Version 0.6.0 (2007-03-28)

* Added 64 bit integers.
* Added floating point numbers.
* Added endian keyword to Struct to reduce the amount of typing needed.

== Version 0.5.1 (2007-03-21)

* Updated documentation.
* Struct now raises an error if a field name shadows an existing method.

== Version 0.5.0 (2007-03-14)

* Initial public release.