@@ -58,7 +58,7 @@ module BinData
 
       # read until zero byte or we have read in the max number of bytes
       while ch != "\0" and i != max_length
-        ch = readbytes(io, 1)
+        ch = io.readbytes(1)
         str << ch
         i += 1
       end
